support different sized clients for a session or session group

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,10 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 # bind c new-window -c "#{pane_current_path}"
 
+# bind the prefix to `
 unbind C-b
 set -g prefix `
 bind-key ` send-prefix
+
+# for windows in a session group to have the ability of different sizes
+set-window-option -g aggressive-resize
